; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/edit/extr_edittest.c_CreatePushButton.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/edit/extr_edittest.c_CreatePushButton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"BUTTON\00", align 1
@WS_CHILD = common dso_local global i32 0, align 4
@BS_PUSHBUTTON = common dso_local global i32 0, align 4
@xButPos = common dso_local global i32 0, align 4
@yButPos = common dso_local global i32 0, align 4
@g_hwnd = common dso_local global i32 0, align 4
@g_hInst = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CreatePushButton(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* @WS_CHILD, align 4
  %12 = load i32, i32* @BS_PUSHBUTTON, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* %8, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @xButPos, align 4
  %17 = load i32, i32* @yButPos, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @g_hwnd, align 4
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = trunc i64 %21 to i32
  %23 = load i32, i32* @g_hInst, align 4
  %24 = call i32 @CreateWindow(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %15, i32 %16, i32 %17, i32 %18, i32 20, i32 %19, i32 %22, i32 %23, i32* null)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* @yButPos, align 4
  %26 = add nsw i32 %25, 21
  store i32 %26, i32* @yButPos, align 4
  %27 = load i32, i32* %9, align 4
  ret i32 %27
}

declare dso_local i32 @CreateWindow(i8*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
